fixed styling on mobile device

--- a/styles.mob.css
+++ b/styles.mob.css
@@ -1,4 +1,9 @@
 @media (max-width: 800px) {
+    body {
+        height: auto;
+        min-height: 100%;
+    }
+    
     .wrapper {
         padding: 50px 20px 30px 20px;
     }
@@ -42,6 +47,11 @@
         flex: 1;
         display: flex;
         flex-direction: column;
+        margin-top: 60px;
+    }
+
+    .rocket-image {
+        max-width: 100%;
     }
 
     .circle1 {
